...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="uUv-uv-8ui">
                                <rect key="frame" x="124" y="84" width="166" height="165.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="bilingualLogo"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="uUv-uv-8ui" secondAttribute="height" multiplier="1:1" id="G8i-o0-Plz"/>
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="51E-bf-6OE">
                                <rect key="frame" x="20" y="329.5" width="374" height="120"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DOO-UD-6ki">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" systemColor="systemTealColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="userNameTextField">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Cgn-VR-W4h"/>
                                        </constraints>
                                        <color key="textColor" systemColor="systemTealColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iRp-0k-waG">
                                        <rect key="frame" x="0.0" y="70" width="374" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginButton">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="ez1-1Q-9Hx">
                                <rect key="frame" x="20" y="138" width="374" height="137"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wi4-al-lmo" userLabel="UserID">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="29"/>
                                        <accessibility key="accessibilityConfiguration" identifier="userNameLabel">
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="ewC-KB-VZK">
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="8gA-yI-qgI">
                            <color key="tintColor" red="0.98646980520000005" green="0.40774679180000001" blue="0.22824549669999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="logoutButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="backButtonPressed:" destination="UEJ-3r-hj6" id="Hwe-B6-I0s"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
